🏜️🫑 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
   </head>
-  <body onmouseup="stopTone()">
+  <body id="body" onmouseup="stopTone()" class="">
     <!-- this is the start of content -->
     <h1>All of The Light (And Sounds)</h1>
     <p>
       Hey, here's a basic memory game with colors and lights. Just hit buttons
-      in the order that they appear in until you win. Enjoy !
+      in the order that they appear in until you win. Enjoy!
     </p>
     <p id="newInfo" class="hidden">
       Congradulations! Try Start++ for an endless mode! In the future, you can
-      speed through the first 8 rounds to quickly get to endless. Good Luck !
+      speed through the first 8 rounds to quickly get to endless. Good Luck!
+    </p>
+    <p id="skipInfo" class="hidden">
+      Nice job finding this secret! Try Start++ for an endless mode! To do this
+      again, quickly click the start/stop buttons. Good luck!
     </p>
     <button id="startBtn" class="menu" onclick="startGame()">Start</button>
     <button id="startPlusBtn" class="menu hidden" onclick="startGamePlus()">
@@ -36,28 +40,28 @@
         id="button1"
         class="clickable"
         onclick="guess(1)"
-        onmousedown="startTone(1), stopSequence()"
+        onmousedown="startTone(1); stopSequence();"
         onmouseup="stopTone()"
       ></button>
       <button
         id="button2"
         class="clickable"
         onclick="guess(2)"
-        onmousedown="startTone(2), stopSequence()"
+        onmousedown="startTone(2); stopSequence();"
         onmouseup="stopTone()"
       ></button>
       <button
         id="button3"
         class="clickable"
         onclick="guess(3)"
-        onmousedown="startTone(3), stopSequence()"
+        onmousedown="startTone(3); stopSequence();"
         onmouseup="stopTone()"
       ></button>
       <button
         id="button4"
         class="clickable"
         onclick="guess(4)"
-        onmousedown="startTone(4), stopSequence()"
+        onmousedown="startTone(4); stopSequence();"
         onmouseup="stopTone()"
       ></button>
       <br />
@@ -66,28 +70,28 @@
         id="button5"
         class="clickable"
         onclick="guess(5)"
-        onmousedown="startTone(5), stopSequence()"
+        onmousedown="startTone(5); stopSequence();"
         onmouseup="stopTone()"
       ></button>
       <button
         id="button6"
         class="clickable"
         onclick="guess(6)"
-        onmousedown="startTone(6), stopSequence()"
+        onmousedown="startTone(6); stopSequence();"
         onmouseup="stopTone()"
       ></button>
       <button
         id="button7"
         class="clickable"
         onclick="guess(7)"
-        onmousedown="startTone(7), stopSequence()"
+        onmousedown="startTone(7); stopSequence();"
         onmouseup="stopTone()"
       ></button>
       <button
         id="button8"
         class="clickable"
         onclick="guess(8)"
-        onmousedown="startTone(8), stopSequence()"
+        onmousedown="startTone(8); stopSequence();"
         onmouseup="stopTone()"
       ></button>
     </div>
